# misc_py

./: .gitignore  AB_Calculator.py  AB_Calculator_Tester.py  API_tester.py  AnodotParsing.py  Appox_distinct.py  BB.py  Circular Graph.py  Counters_Scraping.py  Euler_183.py  Explore_TASE.py  Issue Freshness.sql  JS_Parsing.py  Load_app_definitions.py  Load_nginx_json_log.py  Minmax_tictactoe.py  PercentileAccumulation.py  PrestoLogCollector.py  Prime_Sequences.py  PyGame_Intro.py  Python_selenium1.py  RandomSquareArea.py  RandomSquareArea.py.string  Regex.py  Sequences.py  Spawn_process.py  TA125.csv  TA125.output.csv  TA125.output_percentage.csv  TA125.xlsx  Transform_TASE_orig.py  VRail-Sim1.py  Weighted_percentile_Aggregation.py  allign_cgm.py  beatifulsoup1.py  bell-3-conf.py  bell-chsh.py  bell_inequality.csv  bell_theorm.py  betting_calc.py  (+117 more)
.cursor/rules/: test-genrator.mdc
AI/: instructor_sample1.py  instructor_sample2.py  requirements.txt
arc_to_firefox_bookmarks_synch/: main.py  merge_trees.py
cyco/: 52.213.141.246.openvas.json  52.213.141.246.openvas1.html  52.213.141.246.openvas2.json  52.213.141.246.openvas2.json.xml  52.213.141.246.openvas3.json  52.213.141.246.openvas3.json.xml  bq_opt.py  github_stats.py  query_expressions.csv  smbghost_verifier.py
cyco/52.213.141.246.openvas1_files/: 0.js  40986.js  bluesnap-errors.js  bluesnap.js  bundle.js  font_awesome.css  fs.html  gtm.html  main.css  popupBlocker.html  superQueryBottomScripts.js  superQueryTopScripts.js  utilities.js  vendors.css
euler_386/: euler_386.cpp  euler_386.sln  euler_386.vcxproj  euler_386.vcxproj.filters
kiss-a-grandchild/: main.py
lamp/: create_lamp_base.py  debug_scene.hipnc  find_node_type.py  houdini1.py  parameters.json  readme.md  setup_houdini_env.sh
lamp_my/: Makefile  pyproject.toml
lamp_my/lamp_my.egg-info/: PKG-INFO  top_level.txt
lamp_my/src/: main.py  sheet.py  sheet_example.py  world_objects.py
lamp_my/src/lamp_my.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lamp_my/tests/: test_formatting.py  test_world.py
langchain1/: Chain.py
output/: diagram.pdf.json
playwright/: scenario1.txt
playwright/generated_tests/: scenario1.spec.ts
react1/: math_question1.py  physics_question1.py  sample1.py  sample2.py  setup.py
rust/eular_386/: Cargo.toml
rust/eular_386/src/: main.rs
shelf_ocr/: Images_to_DF.py  Images_to_DF1.py  OCR_data_set_generation.py  adanet1.py  adanet2.py
unstructured/: main.py  requirements.txt
vrail/: VRail-Sim2.py  cart.py  euler_762.py  rail_track.json
vrail/track_backups/: rail_track_16-Jul-2022--19-05-53-936717.json  rail_track_16-Jul-2022--22-57-54-828645.json  rail_track_16-Jul-2022--22-59-35-476077.json  rail_track_18-Jul-2022--11-21-11-342636.json  (+5 more)
web3/: eth_listener.py  requirements.txt
